# ai-agent

./: .gitignore  Cargo.toml  docker-compose.yml
.github/workflows/: ci.yml
config/: default.toml
crates/trader/: Cargo.toml
crates/trader/src/: config.rs  db.rs  domain.rs  main.rs  ports.rs
docs/: PLAN.md  TODO.md
