[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
config = { version = "0.14", features = ["toml"] }
sqlx = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio-rustls"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }


